--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler [alpha]</title>
+    <title>Work Day Scheduler [beta]</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/locale/af.min.js"></script>
     <script src="script.js"></script>
   </head>
 
