--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Playfair+Display&family=Dosis&family=Montserrat&family=Raleway&display=swap" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -22,7 +23,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler [beta]</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/locale/af.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
     <script src="script.js"></script>
   </head>
 
@@ -31,7 +32,12 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <label class="switch" for="status-toggle">
+        <input checked type="checkbox" name="status-toggle" id="status-toggle" />
+        <span class="slider">Blur Past</span>
+      </label>
     </header>
+    
     <div class="container">
       <!-- Timeblocks go here -->
       </div>
